<resources>
    <string name="app_name">English Handbook</string>

    <string name="database_name" translatable="false">english.db</string>
    <string name="database_zip_name" translatable="false">englishDB.zip.db</string>
    <string name="database_link" translatable="false">https://dl.dropbox.com/s/f3liq7lyunoybfp/englishDB.zip?dl=0</string>
    <string name="database_version_link" translatable="false">https://dl.dropbox.com/s/05d904wtt4t07c1/version.txt?dl=0</string>
    <string name="database_pass" translatable="false">_Ar7y0M.Eng1sh^d47aB453</string>

    <!--!!!!!!!!!!!!!!!!!TEST!!!!!!!!!!!!!!!!!-->
    <string name="ad_banner_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_interstitial_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <!--Release-->
    <!--    <string name="ad_banner_unit_id" translatable="false"> </string>-->
    <!--    <string name="ad_interstitial_unit_id" translatable="false"> </string>-->

    <!--Links-->
    <string name="app_link" translatable="false">https://play.google.com/store/apps/details?id=com.zhukovartemvl.luckydays</string>
    <string name="email" translatable="false"><u>zhukovartemvl@gmail.com</u></string>

    <string name="database_version">Версия базы данных</string>

    <string name="feedback">Обратная связь: </string>
    <string name="review"><u>Оставить отзыв</u></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="bug_report">Сообщить об ошибке</string>
    <string name="share">Поделиться приложением</string>
    <string name="rate">Оценить приложение</string>
    <string name="about">О приложении</string>
    <string name="update">Обновить</string>
    <string name="version">Версия</string>


    <string name="database_update">Обновление базы данных</string>
    <string name="database_no_upgrade">Обновление базы данных не требуется</string>
    <string name="database_updated">База данных обновлена</string>
    <string name="title_feature">home</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="title_article">Article</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_links">Links</string>
    <string name="title_verbs">Verbs</string>

</resources>
