<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.zhukovartemvl.englishhandbook.ui.about.AboutViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".presentation.ui.about.AboutFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.appVersion}"
                android:textAlignment="center"
                android:textSize="16sp"
                tools:text="@string/version" />

            <TextView
                android:id="@+id/dbVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.databaseVersion}"
                android:textAlignment="center"
                android:textSize="16sp"
                tools:text="@string/database_version" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="@string/feedback"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/emailTextClick"
                style="@style/LinkText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.onEmailClick()}"
                android:text="@string/email"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/reviewTextClick"
                style="@style/LinkText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.onReviewClick()}"
                android:text="@string/review"
                android:textAlignment="center" />
        </LinearLayout>

    </ScrollView>

</layout>